# umi

./: .flake8  .gitignore  .gitmodules  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  code_of_conduct.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  nightly.yml  wheels.yml
docs/: umi_waveforms.py
examples/regfile/: README.md  test.py  testbench.sv
examples/umi_mem/: .gitignore  README.md  test_umi_mem.py  umi_mem.py  umi_mem.v
examples/umi_mem/tests/: expect1.memh  expect2.memh  stimulus1.memh  stimulus2.memh
lumi/: README.md
lumi/rtl/: lumi.v  lumi_crossbar.v  lumi_fifo.v  lumi_regmap.vh  lumi_regs.v  lumi_rx.v  lumi_rxmac.v  lumi_tx.v  lumi_txmac.v  lumi_txphy.v
lumi/testbench/: config.vlt  dut_lumi.v  test_lumi.py  test_lumi_rnd.py  testbench_lumi.sv
rtl/: umi_pack.v  umi_unpack.v
submodules/: update.sh
sumi/rtl/: umi_combiner.v  umi_mux.v
sumi/testbench/: tb_umi_crossbar.v  tb_umi_fifo.v  tb_umi_regif.v
sumi/testbench/verilog/: umi_testbench.sv
surfer/umi_cmd/: README.md  umi_cmd.toml
tests/: bit_utils.py  clink_txproto_test.py  cocotb_utils.py  conftest.py  run_cocotb_sim.py  sumi.py  sumi_driver.py  sumi_monitor.py  test_lint.py  test_setup.py  tumi.py  vrd_transaction.py
tests/adapters/: conftest.py  test_umi2apb.py
tests/adapters/axi2umi/: test_axi2umi.py  test_axird2umi.py  test_axiwr2umi.py
tests/adapters/axi4full2umi/: test_axi4_full_rd2umi.py  test_axi4_full_wr2umi.py
tests/adapters/tl2umi/: __init__.py  env.py  test_advanced.py  test_basic.py  test_run.py  test_tl2umi_run.py  testbench.v  tl_driver.py  tl_monitor.py
tests/adapters/umi2apb/: __init__.py  env.py  run.py  test_backpressure.py  test_basic_WR.py  test_full_throughput.py  test_posted_write.py  test_random_stimulus.py  test_run.py  test_umi2apb_run.py
tests/lumi/: conftest.py  test_lumi.py  test_lumi_ready.py  test_lumi_rnd.py
tests/sim_cmd_files/: sim_cmd_files.py
tests/sumi/: conftest.py  test_crossbar.py  test_demux.py  test_fifo_flex.py  test_isolate.py  test_mem_agent.py  test_mux.py  test_regif.py  test_switch.py  test_umi_ram.py
tests/sumi/umi_arbiter/: test_umi_arbiter.py
umi/: __init__.py  common.py  conftest.py  umi.py
umi/adapters/: __init__.py  common.py  tl2umi.f  umi2axil.f
umi/cocotb/: sumi.py  tumi.py
umi/lumi/: README.md  __init__.py  lumi.f  lumi.py
umi/lumi/rtl/: lumi.v  (+6 more)
umi/rtl/: umi_addr.v  umi_arbiter.v  umi_combiner.v  umi_crossbar.v  umi_decode.v  umi_encode.vh  umi_endpoint.v  umi_fifo.v  umi_fifo_flex.v  umi_fifo_width.v  umi_isolate.v  umi_mem_agent.v  umi_messages.vh  umi_mux.v  umi_pack.v  umi_pipeline.v  umi_priority.v  umi_regif.v  umi_splitter.v  umi_stimulus.v  umi_unpack.v  umi_write.v
umi/sumi/: __init__.py  common.py  sumi.py  umi_endpoint.f
umi/testbench/: buffer.memh  build_local.sh  config.vlt  dut_umi_fifo.v  dut_umi_fifo_flex.v  dut_umi_fifo_width.v  hello.memh  tb_umi_arbiter.v  tb_umi_crossbar.v  tb_umi_fifo.v  tb_umi_fifo_flex.v  tb_umi_fifo_width.v  tb_umi_priority.v  tb_umi_regif.v  test_crossbar.py  test_fifo.py  test_fifo_flex.py  test_mem_agent.py  test_regif.py  test_regif.sv  test_umi_regif.py  testbench_crossbar.sv  testbench_fifo.sv  testbench_fifo_flex.sv  testbench_mem_agent.sv  testbench_regif.sv  umi_testbench.py
umi/umi/: __init__.py
utils/rtl/: README.md  axilite2umi.v  fifo_nd.v  tl-uh.vh  tl2umi_np.v  umi2axilite.v  umi2tl_np.v  umi_address_remap.v  umi_data_aggregator.v  umi_packet_merge_greedy.v
utils/testbench/: buffer_axilite.memh  build_local.sh  config.h  config.vlt  tb_axilite2umi.v  tb_tl2umi_np.v  tb_umi_data_aggregator.v  tb_umi_packet_merge_greedy.v  test_umi2tl_np.py  test_umi_address_remap.py  test_umi_packet_merge_greedy.py  testbench_umi2axilite.sv  testbench_umi2tl_np.cc  testbench_umi2tl_np.v  testbench_umi_address_remap.v  testbench_umi_packet_merge_greedy.v  tilelink.h  tlmemsim.cpp  tlmemsim.h
(+207 files in other folders)
