[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm[toml] >= 8, <10"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["umi"]

[project]
name = "umi"
authors = [{name = "Zero ASIC"}]
description = "Universal Memory Interface (UMI)"
readme = "README.md"
urls = {Homepage = "https://github.com/zeroasiccorp/umi"}
requires-python = ">= 3.9"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler >= 0.36.5",
    "lambdalib >= 0.12.0, <0.13.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "umi.__version__"}

[project.optional-dependencies]
test = [
    "pytest == 8.4.2",
    "pytest-xdist == 3.8.0",
    "pytest-timeout == 2.4.0",
    "flake8 == 7.3.0",
    "switchboard-hw @ git+https://github.com/zeroasiccorp/switchboard.git@d2a067b997e5798bbea1b9aa8fea2ed5a3f058d8",
    "cocotb==2.0.1",
    "cocotb-bus==0.3.0",
    "cocotbext-axi==0.1.28",
    "cocotbext-umi==0.0.3"
]

[tool.check-wheel-contents]
ignore = [
    "W002"
]

[tool.pytest.ini_options]
markers = [
    "eda: this test requires EDA tools installed to run",
    "switchboard: this test requires switchboard to run",
    "cocotb: this test requires cocotb to run"
]
pythonpath = [
    "tests"
]
testpaths = [
    "tests",
    "umi/sumi/tests",
    "umi/lumi/tests"
]
timeout = "360"
